fix date inputs on mobile

--- a/app/assets/stylesheets/responsive_fixes.css.sass
+++ b/app/assets/stylesheets/responsive_fixes.css.sass
@@ -52,5 +52,7 @@
     width: auto
   .mobile-no-padding
     padding: 0px
+  .input-prepend input, .input-append input, .input-prepend input[class*="span"], .input-append input[class*="span"]
+    width: 250px
   .tip-explanations, .tutorial-close, .random-tip
     display: none
